postcss/testData/inspections/media/incorrectMediaRange.pcss
@media (200px <<error descr="an identifier expected"> </error><= 400px){}